# snare

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
snare/: __init__.py  analytics.py  catalog.py  cli.py  client.py  compile.py  dga.py  dnswire.py  labels.py  parse.py  pkg.py  qlog.py  resolver.py  service.py  ui.py
tests/: test_analytics.py  test_hardening.py  test_profiles.py  test_resolver.py  test_shield.py
